<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OneActivity">

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/holo_blue_dark">

        <TextView
            android:id="@+id/explainOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/why_one"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:paddingTop="5pt"
            android:paddingBottom="5pt" />

        <EditText
            android:id="@+id/et_simple"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text"
            android:hint="@string/hint" />

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:paddingLeft="10pt"
            android:paddingRight="10pt"
            android:textStyle="italic" />

    </LinearLayout>
</RelativeLayout>